added a new section in campaign.html

--- a/campaign.html
+++ b/campaign.html
@@ -124,7 +124,8 @@
 
                                 <h3 class="h3 title">Financial help for Poor</h3>
 
-                                <p class="text">Our financial help for poor People's campaign has been ongoing for a while now and we have <b>RAISED ₦420,000 REMAINING THE SUM OF ₦300,000</b></p>
+                                <p class="text">Our financial help for poor People's campaign has been ongoing for a
+                                    while now and we have <b>RAISED ₦420,000 REMAINING THE SUM OF ₦300,000</b></p>
 
                                 <div class="donation-bar">
                                     <span class="donation-percentage donate-poor"> <br>
@@ -135,6 +136,7 @@
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate now</a>
                             </div>
                         </li>
+
                         <li>
                             <div class="call-prayer-card">
 
@@ -144,7 +146,9 @@
 
                                 <h3 class="h3 title">Send Children to School</h3>
 
-                                <p class="text">We have noticed a fall in Students going to School due to several reasons. For this campaign,<b> the sum of ₦200,000 has been raised REMAINING 320,000</b></p>
+                                <p class="text">We have noticed a fall in Students going to School due to several
+                                    reasons. For this campaign,<b> the sum of ₦200,000 has been raised REMAINING
+                                        320,000</b></p>
 
                                 <div class="donation-bar">
                                     <span class="donation-percentage donate-children"> <br>
@@ -156,8 +160,6 @@
                             </div>
                         </li>
 
-
-
                         <li>
                             <div class="call-prayer-card">
 
@@ -167,7 +169,9 @@
 
                                 <h3 class="h3 title">School fees for 200 Girls</h3>
 
-                                <p class="text">The Girl Child has always been neglected when it comes to schooling, that is why we came up with this Campaign. <b>we have RAISED ₦330,000 REMAINING ₦150,000</b> </p>
+                                <p class="text">The Girl Child has always been neglected when it comes to schooling,
+                                    that is why we came up with this Campaign. <b>we have RAISED ₦330,000 REMAINING
+                                        ₦150,000</b> </p>
 
                                 <div class="donation-bar">
                                     <span class="donation-percentage donate-girl"> <br>
@@ -183,10 +187,109 @@
                 </div>
             </section>
 
-
-
-
             <!-- The follow campaigns section ends -->
+
+
+            <!-- The Upcoming campaign section starts  -->
+
+            <section class="section upcomingCampaigns">
+                <div class="container">
+
+                    <h2 class="h2 section-title underline">Upcoming Campaigns</h2>
+
+                    <ul class="campaignsCenter">
+                        <li class="campaign1">
+
+                            <div class="dateCampaign">
+                                <h2>15th <br> Sep</h2>
+                            </div> <br>
+
+                            <div class="campaignTalk">
+                                <h3 class="h3">Poverty Eradication Campaign </h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>8:00 am - 12:30 pm
+                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                </h5>
+
+                                <p>Poverty as we all know is a bad state in the life of any Man. The Lord inspired us in
+                                    this activity and that is why we need your support in achieving a success for this
+                                    Campaign.</p>
+                                <a href="./contact.html" class="btn">Join Now</a>
+                            </div>
+                        </li>
+
+                        <li class="campaign2">
+
+                            <div class="dateCampaign">
+                                <h2>28th <br> Dec</h2>
+                            </div> <br>
+
+                            <div class="campaignTalk2">
+                                <h3 class="h3">Education campaign against hard Drugs</h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>9:00 am - 4:30 pm
+                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
+                                </h5>
+
+                                <p>The scripture says we should love our Neighbors just as we love ourselves. One great
+                                    way to show love to your Neighbor is by giving out whatever you can afford to give.
+                                    He who gives receives.</p>
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <ul class="campaignsCenter2">
+                        <li class="campaign1">
+
+                            <div class="dateCampaign">
+                                <h2>15th <br> Sep</h2>
+                            </div> <br>
+
+                            <div class="campaignTalk">
+                                <h3 class="h3">Equipping Ogun State Women with skills</h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>11:00 am - 7:30 pm
+                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                </h5>
+
+                                <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four
+                                    Members, now the Church has grown and we will like to give back to our very own
+                                    people in Ogun State</p>
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                            </div>
+                        </li>
+
+                        <li class="campaign2">
+
+                            <div class="dateCampaign2">
+                                <h2>13th <br> Nov</h2>
+                            </div> <br>
+
+                            <div class="campaignTalk2">
+                                <h3 class="h3">After School program for Students</h3>
+
+                                <h5>
+                                    <i class="fas fa-time"></i>3:00 pm - 6:30 pm
+                                    <i class="fas fa-map-marker"></i>Ogun State, Nigeria
+                                </h5>
+
+                                <p>"Train up a Child in the way he should grow and when he is old he will never depart
+                                    from it" That's our goal in this event for vast amount of Students in both secondary
+                                    and primary Schools</p>
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+            </section>
+
+
+            <!-- The Upcoming campaign section ends  -->
 
 
         </article>
@@ -194,7 +297,7 @@
 
 
 
-    
+
 
     <!-- The footer section starts -->
 
@@ -389,7 +492,8 @@
 
         <div class="footer-bottom">
             <p class="copyright">
-                &copy; 2022 <a href="https://www.instagram.com/emmanuel.9944/" class="copyright-link">Emmanuel Mojiboye Oluwole</a> . All Rights Reserved
+                &copy; 2022 <a href="https://www.instagram.com/emmanuel.9944/" class="copyright-link">Emmanuel Mojiboye
+                    Oluwole</a> . All Rights Reserved
             </p>
         </div>
 
@@ -397,7 +501,7 @@
 
     <!-- The footer section ends -->
 
-    
+
     <!-- The scroll top button starts -->
 
     <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
