--- a/events.html
+++ b/events.html
@@ -288,7 +288,7 @@
                                 </h5>
 
                                 <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members, now the Church has grown and we will like to give back to our very own people in Ogun State</p>
-                                <a href="./contact.html" class="btn">Donate Now</a>
+                                <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
 
