--- a/campaign.html
+++ b/campaign.html
@@ -233,9 +233,7 @@
                                     <i class="fas fa-map-marker"></i>Ogun State, Nigeria
                                 </h5>
 
-                                <p>The scripture says we should love our Neighbors just as we love ourselves. One great
-                                    way to show love to your Neighbor is by giving out whatever you can afford to give.
-                                    He who gives receives.</p>
+                                <p>One great weapon that can be used to combat against hard drugs intake is educating the victims. That is why the Church wants to start this Campaign</p>
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
@@ -249,16 +247,14 @@
                             </div> <br>
 
                             <div class="campaignTalk">
-                                <h3 class="h3">Equipping Ogun State Women with skills</h3>
+                                <h3 class="h3">Educating Adolescents on Pre-marital Sex</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>11:00 am - 7:30 pm
+                                    <i class="fas fa-time"></i>4:00 am - 7:30 pm
                                     <i class="fas fa-map-marker"></i>Lagos State, Nigeria
                                 </h5>
 
-                                <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four
-                                    Members, now the Church has grown and we will like to give back to our very own
-                                    people in Ogun State</p>
+                                <p>Modern society doesn't teach Students, and Adolescents about "Sex" and that is why the Church wants to take up that Job.</p>
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
@@ -270,16 +266,14 @@
                             </div> <br>
 
                             <div class="campaignTalk2">
-                                <h3 class="h3">After School program for Students</h3>
+                                <h3 class="h3">Sensitizing the Youths on Politics</h3>
 
                                 <h5>
-                                    <i class="fas fa-time"></i>3:00 pm - 6:30 pm
+                                    <i class="fas fa-time"></i>12:00 pm - 6:30 pm
                                     <i class="fas fa-map-marker"></i>Ogun State, Nigeria
                                 </h5>
 
-                                <p>"Train up a Child in the way he should grow and when he is old he will never depart
-                                    from it" That's our goal in this event for vast amount of Students in both secondary
-                                    and primary Schools</p>
+                                <p>With everyone talking about the upcoming elections, the state of our Political system, Political apathy e.t.c. Youths need Political education</p>
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
