--- a/events.html
+++ b/events.html
@@ -247,7 +247,7 @@
                                     <i class="fas fa-map-marker"></i>Lagos State, Nigeria
                                 </h5>
 
-                                <p>No single Nigerian can deny the fact that the Country is not doing well, with the several dissapointing figures in Economy and other sectors. Join the one week Prayer for Nigeria</p>
+                                <p>No single Nigerian can deny the fact that the Country is not doing well, with the several dissapointing figures in Economy and other sectors. Join the one week Prayer</p>
                                 <a href="./contact.html" class="btn">Join Now</a>
                             </div>
                         </li>
@@ -266,13 +266,13 @@
                                     <i class="fas fa-map-marker"></i>Ogun State, Nigeria
                                 </h5>
 
-                                <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to show love to your Neighbor is by giving out whatever you can afford to give. He who gives receives.</p>
+                                <p>The scripture says we should love our Neighbors just as we love ourselves. One great way to show love to your Neighbor is by giving out whatever you can afford to give.</p>
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
                     </ul>
 
-                    <ul class="eventsCenter">
+                    <ul class="eventsCenter2">
                         <li class="event1">
 
                             <div class="dateEvent">
@@ -287,7 +287,7 @@
                                     <i class="fas fa-map-marker"></i>Lagos State, Nigeria
                                 </h5>
 
-                                <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members, now the Church has grown and we will like to give back to our very own people in Ogun State</p>
+                                <p>Our Church was founded in the Suburban areas of Ogun State when we we had just four Members, now the Church has grown and we will like to give back.</p>
                                 <a href="https://www.instagram.com/emmanuel.9944/" class="btn">Donate Now</a>
                             </div>
                         </li>
