started the blog.html page and done with its hero section

--- a/events.html
+++ b/events.html
@@ -99,7 +99,7 @@
                 <h2 class="bannerText">Event Details</h2>
             </section>
 
-            <!-- The hero section for events.html starts -->
+            <!-- The hero section for events.html ends -->
 
 
 
