--- a/blog.html
+++ b/blog.html
@@ -92,6 +92,24 @@
 
 
 
+    <main>
+        <article>
+
+            <!-- The hero section for events.html starts -->
+
+            <section class="allBanner3"> <br>
+                <h2 class="bannerText">Christianity Blogs</h2>
+            </section>
+
+            <!-- The hero section for events.html ends -->
+
+
+        </article>
+    </main>
+
+
+
+
 
     <!-- The footer section starts -->
 
@@ -294,6 +312,30 @@
     </footer>
 
     <!-- The footer section ends -->
+
+    
+    <!-- The scroll top button starts -->
+
+    <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
+        <ion-icon name="arrow-up-outline">a</ion-icon>
+    </a>
+
+
+    <!-- The scroll top button ends -->
+
+
+
+    <!-- Linking the Owl-Carousel Javascript file -->
+    <script src="./js/owl.carousel.min.js"></script>
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/scripts.js"></script>
+
+    <!-- linking the ionicon script -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+
 
 
 </body>
