added the featured-Posts section to blog.html

--- a/blog.html
+++ b/blog.html
@@ -99,9 +99,108 @@
 
             <section class="allBanner3"> <br>
                 <h2 class="bannerText">Christianity Blogs</h2>
+
+                <div class="infos">
+                    <i class="fas fa-date">Apr 11, 2021</i>
+                    <i class="fas fa-person">Emmanuel</i>
+                    <i class="fas fa-comments">Comment</i>
+                </div>
             </section>
 
             <!-- The hero section for events.html ends -->
+
+
+
+            <!-- The featured posts section -->
+
+            <section class="featured-Posts">
+                <div class="container">
+
+                    <h2 class="h2 section-title underline">Featured Posts</h2>
+
+                    <ul class="featured-one">
+
+                        <li class="firstFeature">
+
+                            <a href="" class="btn">Read now</a>
+
+                            <div class="featured-oneTalk">
+                                <h3 class="h3">How to Know the Holy Spirit well</h3>
+                                <hr>
+
+
+                                <div class="infos">
+                                    <i class="fas fa-date">Apr 11, 2021</i>
+                                    <i class="fas fa-person">RCCG H.O.G</i>
+                                    <i class="fas fa-comments">Comment</i>
+                                </div>
+
+                            </div>
+
+                        </li>
+
+                        <li class="secondFeature">
+
+                            <a href="" class="btn">Read now</a>
+
+                            <div class="featured-oneTalk">
+                                <h3 class="h3">Benefits of a Beleiver's class</h3>
+                                <hr>
+
+
+                                <div class="infos">
+                                    <i class="fas fa-date">Jun 31, 2021</i>
+                                    <i class="fas fa-person">RCCG H.O.G</i>
+                                    <i class="fas fa-comments">Comment</i>
+                                </div>
+
+                            </div>
+
+                        </li>
+
+                        <li class="thirdFeature">
+
+                            <a href="" class="btn">Read now</a>
+
+                            <div class="featured-oneTalk">
+                                <h3 class="h3">A guide for Workers in Training</h3>
+                                <hr>
+
+
+                                <div class="infos">
+                                    <i class="fas fa-date">Mar 31, 2022</i>
+                                    <i class="fas fa-person">RCCG H.O.G</i>
+                                    <i class="fas fa-comments">Comment</i>
+                                </div>
+
+                            </div>
+
+                        </li>
+
+                        <li class="fourthFeature">
+
+                            <a href="" class="btn">Read now</a>
+
+                            <div class="featured-oneTalk">
+                                <h3 class="h3">How precious Children are to God</h3>
+                                <hr>
+
+
+                                <div class="infos">
+                                    <i class="fas fa-date">Jan 31, 2022</i>
+                                    <i class="fas fa-person">RCCG H.O.G</i>
+                                    <i class="fas fa-comments">Comment</i>
+                                </div>
+
+                            </div>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+            </section>
+
 
 
         </article>
@@ -313,7 +412,7 @@
 
     <!-- The footer section ends -->
 
-    
+
     <!-- The scroll top button starts -->
 
     <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
