done with the 1st side of the read-Up section

--- a/blog.html
+++ b/blog.html
@@ -298,6 +298,13 @@
 
                             <a class="btn2" href="./about.html">Read More &nbsp; <i class="fas fa-arrow-right"></i></a>
                         </div>
+                        <div class="pagination">
+                            <a href="#"><i class="fas fa-chevron-left">a</i></a>
+                            <a href="#" class="page">1</a>
+                            <a href="#" class="page">2</a>
+                            <a href="#" class="page">3</a>
+                            <a href="#" ><i class="fas fa-chevron-right">a</i></a>
+                        </div>
                     </div>
                     <aside class="blog-sidebar">
                         <h1>sidebar</h1>
