--- a/blog.html
+++ b/blog.html
@@ -307,7 +307,31 @@
                         </div>
                     </div>
                     <aside class="blog-sidebar">
-                        <h1>sidebar</h1>
+                        <div class="category">
+                            <h2 class="h2">Category</h2>
+                            <ul class="category-list">
+                                <li class="list-items">
+                                    <a href="#">Prayers</a>
+                                    <span>(05)</span>
+                                </li>
+                                <li class="list-items">
+                                    <a href="#">Spiritual</a>
+                                    <span>(09)</span>
+                                </li>
+                                <li class="list-items">
+                                    <a href="#">Teachings</a>
+                                    <span>(04)</span>
+                                </li>
+                                <li class="list-items">
+                                    <a href="#">Biblical</a>
+                                    <span>(07)</span>
+                                </li>
+                                <li class="list-items">
+                                    <a href="#">Health</a>
+                                    <span>(02)</span>
+                                </li>
+                            </ul>
+                        </div>
                     </aside>
                 </div>
 
