done with the newsletter in the sidebar of blog.html

--- a/blog.html
+++ b/blog.html
@@ -420,6 +420,14 @@
                                     
                                 </div>
                             </div>
+
+                            <div class="newsletter">
+                                <h2 class="h2">Newsletter</h2>
+                                <div class="form-element">
+                                    <input type="text" class="inputted-element" placeholder="Email">
+                                    <button class="btn2 form-btn">Subscribe</button>
+                                </div>
+                            </div>
                         </div>
                     </aside>
                 </div>
