done with the popular tags section

--- a/blog.html
+++ b/blog.html
@@ -428,6 +428,20 @@
                                     <button class="btn2 form-btn">Subscribe</button>
                                 </div>
                             </div>
+
+                            <div class="popular-Tags">
+                                <h2 class="h2">Popular Tags</h2>
+                                <div class="tags flex-row2">
+                                    <span class="tag">Teachings</span> 
+                                    <span class="tag">Spiritual</span>
+                                    <span class="tag">Health</span>
+                                    <span class="tag">Bible</span>
+                                    <span class="tag">Prayer</span>
+                                    <span class="tag">Deliverance</span>
+                                    <span class="tag">Fasting</span>
+                                    <span class="tag">Sermon</span>
+                                </div>
+                            </div>
                         </div>
                     </aside>
                 </div>
