started the volunteer.html section and done with it

--- a/blog.html
+++ b/blog.html
@@ -95,7 +95,7 @@
     <main>
         <article>
 
-            <!-- The hero section for events.html starts -->
+            <!-- The hero section for blog.html starts -->
 
             <section class="allBanner3"> <br>
                 <h2 class="bannerText">Christianity Blogs</h2>
@@ -107,7 +107,7 @@
                 </div>
             </section>
 
-            <!-- The hero section for events.html ends -->
+            <!-- The hero section for blog.html ends -->
 
 
 
