done with the volunteer.html page in website

--- a/volunteer.html
+++ b/volunteer.html
@@ -189,6 +189,19 @@
                         </div> 
                     </div>
                 </li>
+
+                <li class="volunteer6">
+                    <div class="teamShare container"> <br>
+                        <h6>VOLUNTEER</h6>
+                        <h2>Davies Samson</h2>
+                        <p>This is our one and only tech guy, he makes sure our events are a success</p>
+                        <div class="teamSocial">
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
+                        </div> 
+                    </div>
+                </li>
                 
 
             </ul>
