--- a/volunteer.html
+++ b/volunteer.html
@@ -168,7 +168,7 @@
                     <div class="teamShare container"> <br>
                         <h6>VOLUNTEER</h6>
                         <h2>Damini Ogeva</h2>
-                        <p>DLadies and gentlemen we would like to introduce you to one of the best artists</p>
+                        <p>Ladies and gentlemen we would like to introduce you to one of the best artists</p>
                         <div class="teamSocial">
                             <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
                             <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
