--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@600;700&display=swap"
         rel="stylesheet">
 
+    <!-- Font aweseome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
 
 </head>
 
@@ -100,6 +103,34 @@
         <h2 class="bannerText">About Us</h2>
 
     </section>
+
+
+    <!-- The banner section for about.html ends -->
+
+   
+    <!-- The we work section starts -->
+
+    <section class="we-Work">
+        <div class="container">
+
+            <ul class="places">
+                <li class="place-one">
+                    <h1>We Work In More Than <br> 10 Countries To <br> Strengthen Equality</h1>
+                </li>
+
+                <li class="placeTalk">
+                    <p>Inequality as we all know has thrived in our Societies for far too long, right from the Colonial era's to even our own new Era we still see some gender favored while the other gender gets neglected that is why our Church ran a Campaign not only in Nigeria but accross the World englightening people on why Inequality should be curbed. <br> <br> We started this Campaign years ago and we cannot deny the fact that all of the Countries we've enlightened have taken a major step towards kicking out inequality in the Society at large. We are grateful to God for the success od that Campaign and also the Government of those Countries, They listened to us and did great work.</p>
+                </li>
+
+            </ul>
+
+        </div>
+    </section>
+
+
+
+    
+    <!-- The we work section ends -->
 
 
 
