--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@600;700&display=swap"
         rel="stylesheet">
-
+        
+    <!-- Font aweseome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 </head>
 
