made major changes to website

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@600;700&display=swap"
         rel="stylesheet">
-        
+
     <!-- Font aweseome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
@@ -40,13 +40,13 @@
 
             <div class="overlay" data-overlay></div>
 
-            <a href="#">
+            <a href="./index.html">
                 <h1 class="logo">H.O.G</h1>
             </a>
 
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
-                    <a href="" class="logo">H.O.G <br> Parish</a>
+                    <a href="./index.html" class="logo">H.O.G <br> Parish</a>
 
                     <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
                         <ion-icon name="close-outline"></ion-icon>
@@ -70,7 +70,7 @@
                         <a href="./about.html" class="navbar-link" data-navbar-link>About </a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./about.html" class="navbar-link" data-navbar-link>Contact </a>
+                        <a href="./contact.html" class="navbar-link" data-navbar-link>Contact </a>
                     </li>
 
 
@@ -296,6 +296,31 @@
 </footer>
 
 <!-- The footer section ends -->
+
+
+
+
+    <!-- The scroll top button starts -->
+
+    <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
+        <ion-icon name="arrow-up-outline">a</ion-icon>
+    </a>
+
+
+    <!-- The scroll top button ends -->
+
+
+
+    <!-- Linking the Owl-Carousel Javascript file -->
+    <script src="./js/owl.carousel.min.js"></script>
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/scripts.js"></script>
+
+    <!-- linking the ionicon script -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 
 
 </body>
