--- a/volunteer.html
+++ b/volunteer.html
@@ -41,13 +41,13 @@
 
             <div class="overlay" data-overlay></div>
 
-            <a href="#">
+            <a href="./index.html">
                 <h1 class="logo">H.O.G</h1>
             </a>
 
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
-                    <a href="" class="logo">H.O.G <br> Parish</a>
+                    <a href="./index.html" class="logo">H.O.G <br> Parish</a>
 
                     <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
                         <ion-icon name="close-outline"></ion-icon>
@@ -71,7 +71,7 @@
                         <a href="./about.html" class="navbar-link" data-navbar-link>About </a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./about.html" class="navbar-link" data-navbar-link>Contact </a>
+                        <a href="./contact.html" class="navbar-link" data-navbar-link>Contact </a>
                     </li>
 
 
@@ -134,7 +134,7 @@
                         <h2>Dean Ambrose</h2>
                         <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
                         <div class="teamSocial">
-                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                            <a href="https://www.instagram.com/emmanuel.9944/"><i class="fab fa-instagram">a</i></a>
                             <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
                             <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
                         </div>
@@ -426,6 +426,30 @@
     </footer>
 
     <!-- The footer section ends -->
+
+    
+
+    <!-- The scroll top button starts -->
+
+    <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
+        <ion-icon name="arrow-up-outline">a</ion-icon>
+    </a>
+
+
+    <!-- The scroll top button ends -->
+
+
+
+    <!-- Linking the Owl-Carousel Javascript file -->
+    <script src="./js/owl.carousel.min.js"></script>
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/scripts.js"></script>
+
+    <!-- linking the ionicon script -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 
 
 </body>
